syntax = "proto3";

package turboci.v1;

option go_package = "github.com/example/turboci-lite/gen/turboci/v1;turbocipb";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "turboci/v1/common.proto";

// StageRunner is the service that stage runners implement.
// The orchestrator calls this service to dispatch work.
service StageRunner {
  // Run executes a stage synchronously, blocking until complete.
  rpc Run(RunRequest) returns (RunResponse);

  // RunAsync starts async execution and returns immediately.
  // The runner must call back to the orchestrator with completion status.
  rpc RunAsync(RunAsyncRequest) returns (RunAsyncResponse);

  // Ping checks if the runner is healthy and available.
  rpc Ping(PingRequest) returns (PingResponse);
}

// RunRequest is sent by the orchestrator to execute a stage synchronously.
message RunRequest {
  // Execution ID for tracking (generated by orchestrator)
  string execution_id = 1;

  // WorkPlan context
  string work_plan_id = 2;
  string stage_id = 3;

  // Attempt index (1-based)
  int32 attempt_idx = 4;

  // Check IDs this stage is assigned to complete
  repeated string assigned_check_ids = 5;

  // Stage arguments (from stage.args)
  google.protobuf.Struct args = 6;

  // Check options for each assigned check
  repeated CheckOptions check_options = 7;

  // Deadline for execution (optional)
  google.protobuf.Timestamp deadline = 8;
}

// CheckOptions provides the check details for execution.
message CheckOptions {
  string check_id = 1;
  string kind = 2;
  google.protobuf.Struct options = 3;
}

// RunResponse is returned by the runner after sync execution completes.
message RunResponse {
  // Final stage state after execution
  StageState stage_state = 1;

  // Results for assigned checks
  repeated CheckUpdate check_updates = 2;

  // Failure information if execution failed
  Failure failure = 3;

  // Execution logs/details
  google.protobuf.Struct details = 4;
}

// CheckUpdate describes an update to a check from execution.
message CheckUpdate {
  string check_id = 1;
  CheckState state = 2;
  google.protobuf.Struct result_data = 3;
  bool finalize = 4;
  Failure failure = 5;
}

// RunAsyncRequest is sent by the orchestrator to start async execution.
message RunAsyncRequest {
  // Execution ID for tracking (generated by orchestrator)
  string execution_id = 1;

  // WorkPlan context
  string work_plan_id = 2;
  string stage_id = 3;

  // Attempt index (1-based)
  int32 attempt_idx = 4;

  // Check IDs this stage is assigned to complete
  repeated string assigned_check_ids = 5;

  // Stage arguments (from stage.args)
  google.protobuf.Struct args = 6;

  // Check options for each assigned check
  repeated CheckOptions check_options = 7;

  // Deadline for execution (optional)
  google.protobuf.Timestamp deadline = 8;

  // Callback endpoint to report completion (orchestrator address)
  string callback_address = 9;
}

// RunAsyncResponse acknowledges that async execution has started.
message RunAsyncResponse {
  // Acknowledgment that execution has started
  bool accepted = 1;

  // Optional estimated completion time
  google.protobuf.Timestamp estimated_completion = 2;

  // Runner's internal execution ID (for correlation)
  string runner_execution_id = 3;
}

// PingRequest is sent to check runner health.
message PingRequest {}

// PingResponse indicates runner health and capacity.
message PingResponse {
  // Runner type this runner handles
  string runner_type = 1;

  // Supported execution modes
  repeated ExecutionMode supported_modes = 2;

  // Current capacity (0 = at capacity, -1 = unlimited)
  int32 available_capacity = 3;
}
